認証機能の実装

--- a/compose.yml
+++ b/compose.yml
@@ -29,7 +29,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: bash -lc "bundle install && bin/rails db:prepare && bin/rails s -b 0.0.0.0 -p 3000"
+    command: bash -lc "rm -f /app/tmp/pids/server.pid && bin/rails s -b 0.0.0.0"
     tty: true
     stdin_open: true
 
