--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,15 @@
-FROM ruby:3.3.6
+FROM ruby:3.4.8
 
 # 必要なOSパッケージ
 RUN apt-get update -qq && apt-get install -y \
   build-essential \
   libpq-dev \
   nodejs \
-  yarn
+  npm \
+  && npm install -g yarn \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
+
 
 WORKDIR /app
 
