--- a/config/database.yml
+++ b/config/database.yml
@@ -15,9 +15,6 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: db
-  username: postgres
-  password: password
   pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
@@ -25,6 +22,9 @@ default: &default
 development:
   <<: *default
   database: myapp_development
+  host: db
+  username: postgres
+  password: password
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -59,7 +59,9 @@ development:
 test:
   <<: *default
   database: myapp_test
-
+  host: db
+  username: postgres
+  password: password
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -87,20 +89,17 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: app_production
-    username: app
-    password: <%= ENV["APP_DATABASE_PASSWORD"] %>
+  primary:
+    url: <%= ENV["DATABASE_URL"] %>
+
   cache:
-    <<: *primary_production
-    database: app_production_cache
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cache_migrate
+
   queue:
-    <<: *primary_production
-    database: app_production_queue
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/queue_migrate
+
   cable:
-    <<: *primary_production
-    database: app_production_cable
+    url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cable_migrate
