--- a/config/database.yml
+++ b/config/database.yml
@@ -89,17 +89,21 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary:
+  primary: &primary_production
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
 
   cache:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cache_migrate
 
   queue:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/queue_migrate
 
   cable:
+    <<: *default
     url: <%= ENV["DATABASE_URL"] %>
     migrations_paths: db/cable_migrate
