--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,6 +4,7 @@ FROM ruby:3.4.8
 RUN apt-get update -qq && apt-get install -y \
   build-essential \
   libpq-dev \
+  libvips \
   nodejs \
   npm \
   && npm install -g yarn \
